--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -599,7 +599,7 @@
     <value>AssociateIndex</value>
   </data>
   <data name="notifyCollisions.HelpString">
-    <value>Check to receive notifications when a collision occurs in an iFolder.</value>
+    <value>Check to receive notifications when a conflict occurs in an iFolder.</value>
   </data>
   <data name="notifyCollisions.Image" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value />
@@ -629,7 +629,7 @@
     <value>1</value>
   </data>
   <data name="notifyCollisions.Text">
-    <value>N&amp;otify of collisions</value>
+    <value>N&amp;otify of conflicts</value>
   </data>
   <data name="notifyCollisions.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleLeft</value>
@@ -3506,7 +3506,7 @@
     <value>The iFolder account is disabled.  Please contact your network administrator for assistance.</value>
   </data>
   <data name="accountLockout">
-    <value>The user account has been locked out.  Please contact your network administrator for assistance.</value>
+    <value>The user account has been locked.  Please contact your network administrator for assistance.</value>
   </data>
   <data name="graceLogin">
     <value>Your password has expired.  You have {0} grace logins remaining.</value>
@@ -3517,14 +3517,23 @@
   <data name="alreadyJoined">
     <value>An account for this server already exists on the local machine.  Only one account per server is allowed.</value>
   </data>
+  <data name="alreadyJoinedTitle">
+    <value>Account Already Exists</value>
+  </data>
+  <data name="PreferencesErrorTitle">
+    <value>iFolder Preferences Error</value>
+  </data>
   <data name="saveSyncError">
-    <value>An error was encountered while saving the default sync interval.</value>
+    <value>An error was encountered while saving the default synchronization interval.</value>
   </data>
   <data name="readSyncError">
-    <value>An error was encountered while reading the default sync interval.</value>
+    <value>An error was encountered while reading the default synchronization interval.</value>
   </data>
   <data name="setDefaultError">
     <value>An error was encountered while setting the default account.</value>
+  </data>
+  <data name="accountErrorTitle">
+    <value>iFolder Account Error</value>
   </data>
   <data name="saveAccountPrompt">
     <value>Do you want to save the new account?</value>
@@ -3535,6 +3544,9 @@
   <data name="savePasswordError">
     <value>An error was encountered while saving the password.</value>
   </data>
+  <data name="passwordErrorTitle">
+    <value>iFolder Password Error</value>
+  </data>
   <data name="updatePrompt">
     <value>Do you want to save the changes made to this account?</value>
   </data>
@@ -3542,7 +3554,10 @@
     <value>Save Account</value>
   </data>
   <data name="requiredFieldsMissing">
-    <value>The user name and server host are required fields.  Please fill in the missing information and try again.</value>
+    <value>The Username and Server are required fields.  Please fill in the missing information and try again.</value>
+  </data>
+  <data name="iFolderMessageTitle">
+    <value>iFolder Message</value>
   </data>
   <data name="statusLoggedIn">
     <value>Logged in</value>
@@ -3572,7 +3587,7 @@
     <value>Unable to Verify Identity</value>
   </data>
   <data name="updateHostError">
-    <value>An error was encountered while saving the server host address.</value>
+    <value>An error was encountered while saving the server value.</value>
   </data>
   <data name="removeAccountError">
     <value>An error was encountered while removing the account.</value>
