Fixed message strings to be inline with other clients (partial fix for https://bugzilla.novell.com/show_bug.cgi?id=78570 ... a few more message string changes are still to come).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4851 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3488,7 +3488,7 @@
     <value>An error was encountered while reading the iFolder accounts.</value>
   </data>
   <data name="failedAuth">
-    <value>The user name or password is invalid.  Please try again.</value>
+    <value>The username or password is invalid.  Please try again.</value>
   </data>
   <data name="serverConnectErrorTitle">
     <value>Unable to Connect to iFolder Server</value>
@@ -3515,7 +3515,7 @@
     <value>Expired Password</value>
   </data>
   <data name="alreadyJoined">
-    <value>An account for this server already exists on the local machine.  Only one account per server is allowed.</value>
+    <value>An account for this server already exists for your current local login identity on this computer.  Only one account per server is allowed.</value>
   </data>
   <data name="alreadyJoinedTitle">
     <value>Account Already Exists</value>
