1. Fixed message strings to be inline with other clients (final fix for https://bugzilla.novell.com/show_bug.cgi?id=78570). 2. Fix progress bar to work with large files (fix for https://bugzilla.novell.com/show_bug.cgi?id=91390).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4853 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/GlobalProperties.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.resx
@@ -1844,13 +1844,13 @@
     <value>OK</value>
   </data>
   <data name="Available">
-    <value>Available</value>
+    <value>Not set up</value>
   </data>
   <data name="WaitConnect">
     <value>Waiting to connect</value>
   </data>
   <data name="WaitSync">
-    <value>Waiting to sync</value>
+    <value>Waiting to synchronize</value>
   </data>
   <data name="statusUnknown">
     <value>Unknown</value>
@@ -1862,13 +1862,22 @@
     <value>Unable to Read iFolders</value>
   </data>
   <data name="syncError">
-    <value>An error was encountered while sending the sync command.</value>
+    <value>An error was encountered while synchronizing the iFolder.</value>
+  </data>
+  <data name="syncErrorTitle">
+    <value>iFolder Synchronization Error</value>
   </data>
   <data name="iFolderOpenError">
     <value>Unable to open iFolder {0}.</value>
   </data>
+  <data name="openErrorTitle">
+    <value>iFolder Open Error</value>
+  </data>
   <data name="iFolderRevertError">
     <value>An error was encountered while reverting the iFolder.</value>
+  </data>
+  <data name="revertErrorTitle">
+    <value>iFolder Revert Error</value>
   </data>
   <data name="logEntriesCleared">
     <value>Log entries cleared.</value>
@@ -1880,19 +1889,19 @@
     <value>Done checking for new iFolders</value>
   </data>
   <data name="localSync">
-    <value>Checking for local changes: {0}</value>
+    <value>Checking for changes: {0}</value>
   </data>
   <data name="preSync">
-    <value>Checking for local changes</value>
+    <value>Checking for changes</value>
   </data>
   <data name="disconnected">
     <value>Server unavailable</value>
   </data>
   <data name="synciFolder">
-    <value>Started sync of: {0}</value>
+    <value>Started synchronization: {0}</value>
   </data>
   <data name="syncComplete">
-    <value>Finished sync of: {0}</value>
+    <value>Finished synchronization: {0}</value>
   </data>
   <data name="uploadFile">
     <value>Uploading file: {0}</value>
@@ -1901,7 +1910,7 @@
     <value>Downloading file: {0}</value>
   </data>
   <data name="localFile">
-    <value>Found local change in file: {0}</value>
+    <value>Found changes in file: {0}</value>
   </data>
   <data name="syncingFile">
     <value>Synchronizing file: {0}</value>
@@ -1913,58 +1922,61 @@
     <value>Downloading directory: {0}</value>
   </data>
   <data name="localDir">
-    <value>Found local change in directory: {0}</value>
+    <value>Found changes in directory: {0}</value>
   </data>
   <data name="syncingDir">
     <value>Synchronizing directory: {0}</value>
   </data>
   <data name="deleteClientFile">
-    <value>Deleting file on client: {0}</value>
+    <value>Deleting file: {0}</value>
   </data>
   <data name="deleteClientDir">
-    <value>Deleting directory on client: {0}</value>
+    <value>Deleting directory: {0}</value>
   </data>
   <data name="deleteUnknown">
     <value>Deleting on server: {0}</value>
   </data>
   <data name="declineError">
-    <value>An error was encountered while attempting to decline the invitation.</value>
+    <value>An error was encountered while removing the iFolder.</value>
+  </data>
+  <data name="errorTitle">
+    <value>iFolder Error</value>
   </data>
   <data name="statusSyncing">
     <value>Synchronizing</value>
   </data>
   <data name="statusSyncFailure">
-    <value>Out of sync</value>
+    <value>Incomplete synchronization</value>
   </data>
   <data name="statusSyncingItems">
-    <value>{0} items to sync</value>
+    <value>{0} items to synchronize</value>
   </data>
   <data name="statusSyncItemsFailed">
-    <value>{0} items out of sync</value>
+    <value>{0} items not synchronized</value>
   </data>
   <data name="deleteAction">
     <value>&amp;Delete</value>
   </data>
   <data name="revertTitle">
-    <value>Revert iFolder Confirmation</value>
+    <value>Revert iFolder</value>
   </data>
   <data name="revertPrompt">
-    <value>Are you sure you want to revert this iFolder to a normal folder?</value>
+    <value>Are you sure you want to revert the iFolder to a normal folder?</value>
   </data>
   <data name="removeTitle">
-    <value>Remove iFolder Confirmation</value>
+    <value>Remove iFolder</value>
   </data>
   <data name="removePrompt">
-    <value>Are you sure you want to remove this iFolder?</value>
+    <value>Are you sure you want to remove the iFolder?</value>
   </data>
   <data name="removeiFolder">
-    <value>This will remove you as a member of this iFolder.  You will not be able to access this iFolder unless the owner re-invites you to this iFolder.  The files will not be deleted from your local hard drive.</value>
+    <value>This removes you as a member of the iFolder.  You cannot access the iFolder unless the owner re-invites you.  The files are not deleted from your local hard drive.</value>
   </data>
   <data name="deleteiFolder">
-    <value>This will remove this iFolder from your local machine.  Because you are the owner of this iFolder, the iFolder will also be removed from the iFolder server and all users you have shared with.  The iFolder cannot be recovered or re-shared on another machine.  The files will not be deleted from your local hard drive.</value>
+    <value>This removes the iFolder from your local computer.  Because you are the owner, the iFolder is removed from the server and all member computers.  The iFolder cannot be recovered or re-shared on another computer.  The files are not deleted from your local hard drive.</value>
   </data>
   <data name="revertiFolder">
-    <value>This will revert this iFolder back to a normal folder and leave the files intact.  The iFolder will then be available from the server and will need to be setup in a different location in order to sync.</value>
+    <value>This reverts the iFolder back to a normal folder and leaves the files intact.  The iFolder is then available from the server and must be set up in a different location to synchronize.</value>
   </data>
   <data name="showAll">
     <value>Show All</value>
