--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -992,7 +992,7 @@
     <value>4</value>
   </data>
   <data name="label1.Text">
-    <value>Synchronize my iFolders every</value>
+    <value>Synchronize iFolders Every</value>
   </data>
   <data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -1175,7 +1175,7 @@
     <value>1</value>
   </data>
   <data name="autoSync.Text">
-    <value>Automatically s&amp;ynchronize my iFolders</value>
+    <value>Automatically S&amp;ynchronize iFolders</value>
   </data>
   <data name="autoSync.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>MiddleLeft</value>
