Display error message in log if we run out of disk space on upload/download (fix for https://bugzilla.novell.com/show_bug.cgi?id=74480).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4868 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -721,6 +721,12 @@
   <data name="genericFailure">
     <value>iFolder failed synchronization: {0}</value>
   </data>
+  <data name="serverDiskFullFailure">
+    <value>Insufficient disk space on the server prevented synchronization: {0}</value>
+  </data>
+  <data name="clientDiskFullFailure">
+    <value>Insufficient disk space on this computer prevented synchronization: {0}</value>
+  </data>
   <data name="myiFolders">
     <value>iFolders</value>
   </data>
