A few more updated strings (fix for https://bugzilla.novell.com/show_bug.cgi?id=78570).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4878 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/AcceptInvitation.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.resx
@@ -905,10 +905,10 @@
     <value>Invalid Directory</value>
   </data>
   <data name="acceptError">
-    <value>An exception occurred while accepting the invitation.</value>
+    <value>An exception occurred while setting up the iFolder.</value>
   </data>
   <data name="networkPath">
-    <value>iFolders must be placed on a local drive.</value>
+    <value>iFolders must be placed on a local hard drive.</value>
   </data>
   <data name="selectLocation">
     <value>Select a location for the iFolder.</value>
