--- a/ifolder/src/iFolderShell/ConflictResolver.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.resx
@@ -3124,8 +3124,11 @@
   <data name="openFileError">
     <value>Unable to open the file.</value>
   </data>
+  <data name="readOnlyTitle">
+    <value>Read-Only Access</value>
+  </data>
   <data name="readOnlyInfo">
-    <value>Your ability to resolve conflicts is limited because you have read-only rights to this iFolder.  If there are conflicts that you are not allowed to resolve, the owner of this iFolder will need to fix the conflicts for you.</value>
+    <value>Your ability to resolve conflicts is limited because you have read-only access to the iFolder.  Name conflicts must be renamed locally.  File conflicts will be overwritten by the version of the file on the server.</value>
   </data>
   <data name="errorTitle">
     <value>iFolder Error</value>
