--- a/ifolder/src/iFolderShell/CreateiFolder.resx
+++ b/ifolder/src/iFolderShell/CreateiFolder.resx
@@ -752,7 +752,7 @@
     <value>iFolder Access Error</value>
   </data>
   <data name="accessDenied">
-    <value>You do not sufficient access rights to the specified directory.  Please choose a different directory and try again.</value>
+    <value>You do not have sufficient access to the specified location.  Please choose a different location and try again.</value>
   </data>
   <data name="createAccount">
     <value>To begin using iFolder, you must first set up an iFolder account.  Would you like to set up an iFolder account now?</value>
