--- a/ifolder/src/LinuxClient/po/cz.po
+++ b/ifolder/src/LinuxClient/po/cz.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 #: src/LinuxClient/application/iFolderApplication.cs:368
 #: src/LinuxClient/application/iFolderApplication.cs:459
@@ -273,7 +273,7 @@ msgstr "Access for {0}"
 #: src/LinuxClient/library/iFolderAccessDialog.cs:93
 #: src/LinuxClient/library/iFolderPropSharingPage.cs:144
 msgid "Access"
-msgstr "   přístup          %+5m0  %+4m1.%k2\n"
+msgstr "   přístup          %+5m0  %+4m1.%k2"
 #: src/LinuxClient/library/iFolderAccessDialog.cs:124
 msgid "Make this user the owner of the iFolder."
 msgstr "Make this user the owner of the iFolder."
@@ -512,7 +512,7 @@ msgid "Last Name"
 msgstr "Příjmení"
 #: src/LinuxClient/library/iFolderUserSelector.cs:155
 msgid "Full Name"
-msgstr "Celý název:\n"
+msgstr "Celý název"
 #: src/LinuxClient/library/iFolderUserSelector.cs:162
 #: src/LinuxClient/library/iFolderUserSelector.cs:387
 msgid "<Enter text to find a user>"
@@ -762,7 +762,7 @@ msgstr "Synchronizing: {0}"
 #: src/LinuxClient/library/LogWindow.cs:296
 #, csharp-format
 msgid "Deleting file: {0}"
-msgstr "odstranění souboru\n"
+msgstr "odstranění souboru: {0}"
 #: src/LinuxClient/library/iFolderWindow.cs:1783
 #: src/LinuxClient/library/LogWindow.cs:324
 #, csharp-format
@@ -1028,12 +1028,9 @@ msgid "Application"
 msgstr "Aplikace %s"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:108
 msgid "_Show Confirmation dialog when creating iFolders"
-msgstr "Zobrazit potvrzovací dialogové okno při vytváření složky iFolder
-"
+msgstr "Zobrazit potvrzovací dialogové okno při vytváření složky iFolder"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:113
-msgid ""
-"To start up iFolder at login, leave iFolder running when you log out and "
-"save your current setup."
+msgid "To start up iFolder at login, leave iFolder running when you log out and save your current setup."
 msgstr "To start up iFolder at login, leave iFolder running when you log out and save your current setup."
 #: src/LinuxClient/library/PrefsGeneralPage.cs:128
 msgid "Notification"
