--- a/ifolder/src/LinuxClient/po/fr.po
+++ b/ifolder/src/LinuxClient/po/fr.po
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 #: src/LinuxClient/application/iFolderApplication.cs:368
 #: src/LinuxClient/application/iFolderApplication.cs:459
@@ -762,7 +762,7 @@ msgstr "Synchronizing: {0}"
 #: src/LinuxClient/library/LogWindow.cs:296
 #, csharp-format
 msgid "Deleting file: {0}"
-msgstr "suppression du fichier\n"
+msgstr "suppression du fichier: {0}"
 #: src/LinuxClient/library/iFolderWindow.cs:1783
 #: src/LinuxClient/library/LogWindow.cs:324
 #, csharp-format
