Display appropriate message when attempting to create an iFolder on a network drive (fix for https://bugzilla.novell.com/show_bug.cgi?id=96034).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4963 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/CreateiFolder.resx
+++ b/ifolder/src/iFolderShell/CreateiFolder.resx
@@ -793,4 +793,7 @@
   <data name="rootDriveError">
     <value>iFolders cannot exist at the drive level.  The location selected is at the root of the drive.  Please select a location that is not at the root of a drive and try again.</value>
   </data>
+  <data name="networkPathError">
+    <value>The selected location is on a network or non-physical drive.  iFolders must reside on a physical drive.  Please select a different location and try again.</value>
+  </data>
 </root>
