--- a/ifolder/src/FormsTrayApp/AcceptInvitation.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.zh-TW.resx
@@ -271,7 +271,7 @@
 	</data>
   
 	<data name="ok.Text">
-		<value>確定</value>
+		<value>OK</value>
 	</data>
   
 	<data name="ok.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -375,7 +375,7 @@
 	</data>
   
 	<data name="cancel.Text">
-		<value>取消</value>
+		<value>Abbrechen</value>
 	</data>
   
 	<data name="cancel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -579,7 +579,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>細節</value>
+		<value>Details</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -791,7 +791,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>位置</value>
+		<value>Standort</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -895,7 +895,7 @@
 	</data>
   
 	<data name="browse.Text">
-		<value>瀏覽(&amp;B)...</value>
+		<value>&amp;Durchsuchen...</value>
 	</data>
   
 	<data name="browse.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1131,7 +1131,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>設定 iFolder {0}</value>
+		<value>iFolder {0} einrichten</value>
 	</data>
   
 	<data name="&gt;&gt;$this.Name">
@@ -1143,19 +1143,19 @@
 	</data>
   
 	<data name="Admin">
-		<value>完全控制</value>
+		<value>Vollständige Kontrolle</value>
 	</data>
   
 	<data name="ReadWrite">
-		<value>讀/寫</value>
+		<value>Lesen/Schreiben</value>
 	</data>
   
 	<data name="ReadOnly">
-		<value>唯讀</value>
+		<value>Nur Lesen</value>
 	</data>
   
 	<data name="unknownRights">
-		<value>未知</value>
+		<value>Unbekannt</value>
 	</data>
   
 	<data name="pathValidationError">
@@ -1171,7 +1171,7 @@
 	</data>
   
 	<data name="pathInvalidErrorTitle">
-		<value>無效的位置</value>
+		<value>Ungültiger Standort</value>
 	</data>
   
 	<data name="pathExistsError">
@@ -1203,7 +1203,7 @@
 	</data>
   
 	<data name="iFolderName">
-		<value>姓名</value>
+		<value>Name</value>
 	</data>
   
 	<data name="sharedBy">
@@ -1211,15 +1211,15 @@
 	</data>
   
 	<data name="rights">
-		<value>存取</value>
+		<value>Zugriff</value>
 	</data>
   
 	<data name="Deny">
-		<value>拒絕</value>
+		<value>verweigern</value>
 	</data>
   
 	<data name="createDirectoryError">
-		<value>無法建立目錄</value>
+		<value>Erstellen des Verzeichnisses nicht möglich.</value>
 	</data>
   
 	<data name="createDirectoryMessage">
@@ -1227,7 +1227,7 @@
 	</data>
   
 	<data name="createDirectoryTitle">
-		<value>建立目錄</value>
+		<value>Verzeichnis erstellen</value>
 	</data>
   
 	<data name="accessDenied">
