--- a/ifolder/src/FormsTrayApp/Credits.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/Credits.zh-TW.resx
@@ -263,7 +263,7 @@
 	</data>
   
 	<data name="listBox1.Items25">
-		<value>說明文件</value>
+		<value>Dokumentation</value>
 	</data>
   
 	<data name="listBox1.Items26">
@@ -311,7 +311,7 @@
 	</data>
   
 	<data name="listBox1.Items37">
-		<value>&lt;1&gt; 組織</value>
+		<value>&lt;1&gt; Organisationen</value>
 	</data>
   
 	<data name="listBox1.Items38">
@@ -475,7 +475,7 @@
 	</data>
   
 	<data name="close.Text">
-		<value>關閉</value>
+		<value>Schließen</value>
 	</data>
   
 	<data name="close.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -515,7 +515,7 @@
 	</data>
   
 	<data name="$this.Name">
-		<value>信用</value>
+		<value>Liste der Mitarbeiter und sonstigen Beteiligten</value>
 	</data>
   
 	<data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -611,7 +611,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>信用</value>
+		<value>Liste der Mitarbeiter und sonstigen Beteiligten</value>
 	</data>
   
 	<data name="&gt;&gt;$this.Name">
