--- a/ifolder/src/FormsTrayApp/GlobalProperties.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.zh-TW.resx
@@ -271,7 +271,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>伺服器(&amp;S)：</value>
+		<value>&amp;Server</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -399,7 +399,7 @@
 	</data>
   
 	<data name="columnHeader1.Text">
-		<value>姓名</value>
+		<value>Name</value>
 	</data>
   
 	<data name="columnHeader1.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -419,7 +419,7 @@
 	</data>
   
 	<data name="columnHeader4.Text">
-		<value>位置</value>
+		<value>Standort</value>
 	</data>
   
 	<data name="columnHeader4.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -439,7 +439,7 @@
 	</data>
   
 	<data name="columnHeader5.Text">
-		<value>狀態</value>
+		<value>Status</value>
 	</data>
   
 	<data name="columnHeader5.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -487,7 +487,7 @@
 	</data>
   
 	<data name="menuOpen.Text">
-		<value>開啟(&amp;O)</value>
+		<value>&amp;Öffnen</value>
 	</data>
   
 	<data name="menuOpen.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -515,7 +515,7 @@
 	</data>
   
 	<data name="menuCreate.Text">
-		<value>開新檔案</value>
+		<value>Neu</value>
 	</data>
   
 	<data name="menuCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -543,7 +543,7 @@
 	</data>
   
 	<data name="menuRefresh.Text">
-		<value>重新整理清單(&amp;F)</value>
+		<value>Li&amp;ste aktualisieren</value>
 	</data>
   
 	<data name="menuRefresh.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -571,7 +571,7 @@
 	</data>
   
 	<data name="menuAccept.Text">
-		<value>設定</value>
+		<value>Einrichten</value>
 	</data>
   
 	<data name="menuAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -627,7 +627,7 @@
 	</data>
   
 	<data name="menuShare.Text">
-		<value>共享者(&amp;S)...</value>
+		<value>&amp;Gemeinsam verwenden mit...</value>
 	</data>
   
 	<data name="menuShare.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -655,7 +655,7 @@
 	</data>
   
 	<data name="menuResolve.Text">
-		<value>解決衝突(&amp;C)</value>
+		<value>Konflikte &amp;lösen</value>
 	</data>
   
 	<data name="menuResolve.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -683,7 +683,7 @@
 	</data>
   
 	<data name="menuSyncNow.Text">
-		<value>立即同步化</value>
+		<value>Jetzt synchronisieren</value>
 	</data>
   
 	<data name="menuSyncNow.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -711,7 +711,7 @@
 	</data>
   
 	<data name="menuRevert.Text">
-		<value>恢復為一般資料夾</value>
+		<value>Auf normalen Ordner zurücksetzen</value>
 	</data>
   
 	<data name="menuRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -739,7 +739,7 @@
 	</data>
   
 	<data name="menuRemove.Text">
-		<value>移除(&amp;R)</value>
+		<value>&amp;Entfernen</value>
 	</data>
   
 	<data name="menuRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -795,7 +795,7 @@
 	</data>
   
 	<data name="menuProperties.Text">
-		<value>內容(&amp;P)</value>
+		<value>&amp;Eigenschaften</value>
 	</data>
   
 	<data name="menuProperties.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -839,7 +839,7 @@
 	</data>
   
 	<data name="menuAction.Text">
-		<value>iFolder(&amp;I)</value>
+		<value>&amp;iFolder</value>
 	</data>
   
 	<data name="menuAction.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -867,7 +867,7 @@
 	</data>
   
 	<data name="menuActionCreate.Text">
-		<value>開新檔案</value>
+		<value>Neu</value>
 	</data>
   
 	<data name="menuActionCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -923,7 +923,7 @@
 	</data>
   
 	<data name="menuActionAccept.Text">
-		<value>設定</value>
+		<value>Einrichten</value>
 	</data>
   
 	<data name="menuActionAccept.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -951,7 +951,7 @@
 	</data>
   
 	<data name="menuActionRemove.Text">
-		<value>移除(&amp;R)</value>
+		<value>&amp;Entfernen</value>
 	</data>
   
 	<data name="menuActionRemove.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1007,7 +1007,7 @@
 	</data>
   
 	<data name="menuActionOpen.Text">
-		<value>開啟(&amp;O)</value>
+		<value>&amp;Öffnen</value>
 	</data>
   
 	<data name="menuActionOpen.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1035,7 +1035,7 @@
 	</data>
   
 	<data name="menuActionShare.Text">
-		<value>共享者(&amp;S)...</value>
+		<value>&amp;Gemeinsam verwenden mit...</value>
 	</data>
   
 	<data name="menuActionShare.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1063,7 +1063,7 @@
 	</data>
   
 	<data name="menuActionResolve.Text">
-		<value>解決衝突(&amp;C)</value>
+		<value>Konflikte &amp;lösen</value>
 	</data>
   
 	<data name="menuActionResolve.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1091,7 +1091,7 @@
 	</data>
   
 	<data name="menuActionSync.Text">
-		<value>立即同步化</value>
+		<value>Jetzt synchronisieren</value>
 	</data>
   
 	<data name="menuActionSync.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1119,7 +1119,7 @@
 	</data>
   
 	<data name="menuActionRevert.Text">
-		<value>恢復為一般資料夾</value>
+		<value>Auf normalen Ordner zurücksetzen</value>
 	</data>
   
 	<data name="menuActionRevert.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1147,7 +1147,7 @@
 	</data>
   
 	<data name="menuActionProperties.Text">
-		<value>內容(&amp;P)</value>
+		<value>&amp;Eigenschaften</value>
 	</data>
   
 	<data name="menuActionProperties.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1203,7 +1203,7 @@
 	</data>
   
 	<data name="menuExit.Text">
-		<value>離開(&amp;X)</value>
+		<value>Be&amp;enden</value>
 	</data>
   
 	<data name="menuExit.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1231,7 +1231,7 @@
 	</data>
   
 	<data name="menuView.Text">
-		<value>檢視(&amp;V)</value>
+		<value>An&amp;zeigen</value>
 	</data>
   
 	<data name="menuView.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="menuViewRefresh.Text">
-		<value>重新整理(&amp;R)</value>
+		<value>A&amp;ktualisieren</value>
 	</data>
   
 	<data name="menuViewRefresh.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1287,7 +1287,7 @@
 	</data>
   
 	<data name="menuHelp.Text">
-		<value>說明(&amp;H)</value>
+		<value>&amp;Hilfe</value>
 	</data>
   
 	<data name="menuHelp.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1315,7 +1315,7 @@
 	</data>
   
 	<data name="menuHelpHelp.Text">
-		<value>說明(&amp;H)</value>
+		<value>&amp;Hilfe</value>
 	</data>
   
 	<data name="menuHelpHelp.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1343,7 +1343,7 @@
 	</data>
   
 	<data name="menuHelpAbout.Text">
-		<value>關於(&amp;A)</value>
+		<value>&amp;Info</value>
 	</data>
   
 	<data name="menuHelpAbout.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1559,11 +1559,11 @@
 	</data>
   
 	<data name="toolBarCreate.Text">
-		<value>開新檔案</value>
+		<value>Neu</value>
 	</data>
   
 	<data name="toolBarCreate.ToolTipText">
-		<value>建立新的 iFolder</value>
+		<value>Neuen iFolder-Order erstellen</value>
 	</data>
   
 	<data name="toolBarCreate.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -1587,7 +1587,7 @@
 	</data>
   
 	<data name="toolBarSetup.Text">
-		<value>設定</value>
+		<value>Einrichten</value>
 	</data>
   
 	<data name="toolBarSetup.ToolTipText">
@@ -1615,7 +1615,7 @@
 	</data>
   
 	<data name="toolBarShare.Text">
-		<value>共享</value>
+		<value>Freigeben</value>
 	</data>
   
 	<data name="toolBarShare.ToolTipText">
@@ -1643,7 +1643,7 @@
 	</data>
   
 	<data name="toolBarResolve.Text">
-		<value>解決</value>
+		<value>Auflösen</value>
 	</data>
   
 	<data name="toolBarResolve.ToolTipText">
@@ -1671,7 +1671,7 @@
 	</data>
   
 	<data name="toolBarSync.Text">
-		<value>同步化</value>
+		<value>Synchronisieren</value>
 	</data>
   
 	<data name="toolBarSync.ToolTipText">
@@ -1947,7 +1947,7 @@
 	</data>
   
 	<data name="statusBar1.Text">
-		<value>閒置...</value>
+		<value>Bereit...</value>
 	</data>
   
 	<data name="statusBar1.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -2079,7 +2079,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>iFolder</value>
+		<value>iFolder-Ordner</value>
 	</data>
   
 	<data name="&gt;&gt;columnHeader1.Name">
@@ -2423,7 +2423,7 @@
 	</data>
   
 	<data name="statusOK">
-		<value>確定</value>
+		<value>OK</value>
 	</data>
   
 	<data name="Available">
@@ -2431,7 +2431,7 @@
 	</data>
   
 	<data name="WaitConnect">
-		<value>Waiting to connect</value>
+		<value>Warten auf Verbindung</value>
 	</data>
   
 	<data name="WaitSync">
@@ -2439,7 +2439,7 @@
 	</data>
   
 	<data name="statusUnknown">
-		<value>未知</value>
+		<value>Unbekannt</value>
 	</data>
   
 	<data name="iFolderError">
@@ -2475,7 +2475,7 @@
 	</data>
   
 	<data name="logEntriesCleared">
-		<value>記錄項目已清除。</value>
+		<value>Protokolleinträge gelöscht</value>
 	</data>
   
 	<data name="checkingForiFolders">
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value> 上載檔案中</value>
+		<value>Datei wird heraufgeladen...</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>正在下載檔案...</value>
+		<value>Datei wird heruntergeladen...</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>刪除檔案中\n</value>
+		<value>Datei wird gelöscht</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>刪除目錄中</value>
+		<value>Verzeichnis wird gelöscht</value>
 	</data>
   
 	<data name="deleteUnknown">
@@ -2555,7 +2555,7 @@
 	</data>
   
 	<data name="errorTitle">
-		<value>iFolder 錯誤</value>
+		<value>iFolder-Fehler</value>
 	</data>
   
 	<data name="statusSyncing">
@@ -2575,7 +2575,7 @@
 	</data>
   
 	<data name="deleteAction">
-		<value>刪除(&amp;D)</value>
+		<value>&amp;Löschen</value>
 	</data>
   
 	<data name="revertTitle">
@@ -2587,7 +2587,7 @@
 	</data>
   
 	<data name="removeTitle">
-		<value>移除 iFolder</value>
+		<value>iFolder-Ordner entfernen</value>
 	</data>
   
 	<data name="removePrompt">
@@ -2611,6 +2611,6 @@
 	</data>
   
 	<data name="showAll">
-		<value>顯示全部</value>
+		<value>Alles anzeigen</value>
 	</data>
 </root>
