--- a/ifolder/src/FormsTrayApp/RemoveAccount.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/RemoveAccount.zh-TW.resx
@@ -363,7 +363,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>系統名稱</value>
+		<value>Systemname</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -463,7 +463,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>伺服器</value>
+		<value>Server</value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -563,7 +563,7 @@
 	</data>
   
 	<data name="label4.Text">
-		<value>使用者名稱：</value>
+		<value>Benutzername:</value>
 	</data>
   
 	<data name="label4.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1079,7 +1079,7 @@
 	</data>
   
 	<data name="yes.Text">
-		<value>是(&amp;Y)</value>
+		<value>&amp;Ja</value>
 	</data>
   
 	<data name="yes.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1183,7 +1183,7 @@
 	</data>
   
 	<data name="no.Text">
-		<value>否(&amp;N)</value>
+		<value>&amp;Nein</value>
 	</data>
   
 	<data name="no.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1339,6 +1339,6 @@
 	</data>
   
 	<data name="warning">
-		<value>警告</value>
+		<value>Achtung</value>
 	</data>
 </root>
