--- a/ifolder/src/FormsTrayApp/ServerDetails.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/ServerDetails.zh-TW.resx
@@ -267,7 +267,7 @@
 	</data>
   
 	<data name="label18.Text">
-		<value>空的</value>
+		<value>Leer</value>
 	</data>
   
 	<data name="label18.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -367,7 +367,7 @@
 	</data>
   
 	<data name="label17.Text">
-		<value>已滿</value>
+		<value>Voll</value>
 	</data>
   
 	<data name="label17.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1159,7 +1159,7 @@
 	</data>
   
 	<data name="label13.Text">
-		<value>配額</value>
+		<value>Quote</value>
 	</data>
   
 	<data name="label13.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="label12.Text">
-		<value>已使用</value>
+		<value>Belegt</value>
 	</data>
   
 	<data name="label12.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1359,7 +1359,7 @@
 	</data>
   
 	<data name="label11.Text">
-		<value>可用的</value>
+		<value>Verfügbar</value>
 	</data>
   
 	<data name="label11.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1459,7 +1459,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>描述：</value>
+		<value>Beschreibung:</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1675,7 +1675,7 @@
 	</data>
   
 	<data name="ok.Text">
-		<value>關閉</value>
+		<value>Schließen</value>
 	</data>
   
 	<data name="ok.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1775,7 +1775,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>系統名稱</value>
+		<value>Systemname</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2011,7 +2011,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>細節</value>
+		<value>Details</value>
 	</data>
   
 	<data name="&gt;&gt;$this.Name">
@@ -2023,10 +2023,10 @@
 	</data>
   
 	<data name="notApplicable">
-		<value>無</value>
+		<value>N/Z</value>
 	</data>
   
 	<data name="statusUnknown">
-		<value>未知</value>
+		<value>Unbekannt</value>
 	</data>
 </root>
